small fix on tablet

--- a/assets/homepage-collection-hover.css
+++ b/assets/homepage-collection-hover.css
@@ -243,9 +243,6 @@
   .homepage-collection-hover__links {
     row-gap: 0;
   }
-  .homepage-collection-hover__title {
-    font-size: var(--FONT-SIZE-CAPTION) !important;
-  }
   .homepage-collection-hover__link {
     font-size: 22px;
   }
